--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "akkouq",
 	"displayName": "akkouq",
 	"author": "iryu54",
+	"publisher": "iryu54",
 	"description": "",
 	"version": "0.0.3",
 	"engines": {
