--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 	"repository": "https://github.com/clabroche/akkouq",
 	"description": "",
 	"version": "0.0.6",
+	"icon": "icon.png",
 	"engines": {
 		"vscode": "^1.36.0"
 	},
